kubernetes/apps/monitoring/goldilocks/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
spec:
  hostnames:
    - goldilocks.stevewm.dev
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          namespace: monitoring
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
